tests/privileged/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/privileged-containers/samples/psp-privileged-container/constraint.yaml
